Started implementing the job handlers.
