# src/Entity/Job.php
@@ -4,8 +4,11 @@ declare(strict_types=1);
 
 namespace FactorioItemBrowser\CombinationApi\Server\Entity;
 
+use DateTimeImmutable;
+use DateTimeInterface;
 use Doctrine\Common\Collections\ArrayCollection;
 use Doctrine\Common\Collections\Collection;
+use FactorioItemBrowser\CombinationApi\Client\Constant\JobStatus;
 use Ramsey\Uuid\UuidInterface;
 
 /**
@@ -18,8 +21,8 @@ class Job
 {
     private UuidInterface $id;
     private Combination $combination;
+    private string $priority;
     private string $status;
-    private int $priority;
     private string $errorMessage;
     /** @var Collection<int, JobChange> */
     private Collection $changes;
@@ -51,6 +54,17 @@ class Job
         return $this->combination;
     }
 
+    public function setPriority(string $priority): self
+    {
+        $this->priority = $priority;
+        return $this;
+    }
+
+    public function getPriority(): string
+    {
+        return $this->priority;
+    }
+
     public function setStatus(string $status): self
     {
         $this->status = $status;
@@ -60,17 +74,6 @@ class Job
     public function getStatus(): string
     {
         return $this->status;
-    }
-
-    public function setPriority(int $priority): self
-    {
-        $this->priority = $priority;
-        return $this;
-    }
-
-    public function getPriority(): int
-    {
-        return $this->priority;
     }
 
     public function setErrorMessage(string $errorMessage): self
@@ -90,5 +93,18 @@ class Job
     public function getChanges(): Collection
     {
         return $this->changes;
+    }
+
+    public function getCreationTime(): DateTimeInterface
+    {
+        foreach ($this->changes as $change) {
+            /* @var JobChange $change */
+            if ($change->getStatus() === JobStatus::QUEUED) {
+                return $change->getTimestamp();
+            }
+        }
+
+        // Fallback if the job is missing initial status change, which should never happen.
+        return new DateTimeImmutable();
     }
 }
